@@ -25,6 +25,7 @@ This file lists the incompatible changes between Version 2.x and older versions
     commands (still not meant for library use) are precision00 and
     bitprecision00.
   - gen_factorback: change argument order to match other functions.
+  - pari_add_hist now take 3 arguments (data, cpu time, real time)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the bid struct from idealstar has changed, the new format is not
