@@ -3047,7 +3047,7 @@ char*   uordinal(ulong i);
 void    outmat(GEN x);
 void    output(GEN x);
 char*   RgV_to_str(GEN g, long flag);
-void    pari_add_hist(GEN z, long t);
+void    pari_add_hist(GEN z, long t, long r);
 void    pari_ask_confirm(const char *s);
 void    pari_fclose(pariFILE *f);
 void    pari_flush(void);
@@ -3057,6 +3057,7 @@ pariFILE* pari_fopengz(const char *s);
 void    pari_fprintf(FILE *file, const char *fmt, ...);
 void    pari_fread_chars(void *b, size_t n, FILE *f);
 GEN     pari_get_hist(long p);
+long    pari_get_histrtime(long p);
 long    pari_get_histtime(long p);
 char*   pari_get_homedir(const char *user);
 int     pari_is_dir(const char *name);
